--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,5 @@
     <string name="nfc_pay">付款</string>
     <string name="nfc_transport">乘车码</string>
     <string name="result">识别结果</string>
-    <string name="tofuDescription">&#160;&#160;&#160;&#160;&#160;&#160;&#160;麻婆豆腐，是四川省传统名菜之一，属于川菜，主料为：豆腐，辅料为：蒜苗、牛肉沫(其他肉也可以)，调料为：豆瓣、辣椒面和花椒面、酱油等，麻来自花椒，辣来自辣椒面，此菜成菜麻、辣、鲜、香、烫、翠、嫩、酥，将川菜麻辣味型的特点展现的淋漓尽致.
-    营养成分：热量（1912.55千卡）、蛋白质（106.58克）、脂肪（144.00克）、碳水化合物 （49.25克）
-    </string>
+    <string name="tomatoDescription">&#160;&#160;&#160;&#160;&#160;&#160;&#160;西红柿炒鸡蛋，又名番茄炒蛋，是许多百姓家庭中一道普通的大众菜肴。烹饪方法简单易学，营养搭配合理。每100g的西红柿可食用部分中，含热能79.49KJ 蛋白质0.9g 脂肪0.2g 糖类3.5g 膳食纤维0.5g</string>
 </resources>
